<resources>
    <string name="app_name">ToolbarMenuWeeklyAssignments</string>
    <string name="about">Assalamu Alaikum Sir. How are you. I hope you\'re well by the grace of Almighty Allah. I also happy to become astudent of such this course &amp; i will be here until the course ended.</string>
    <string-array name="spinner_value">
        <item>-Select a category-</item>
        <item>Computer Science &amp; engineering </item>
        <item>Electrical &amp; Electronics Engineering</item>
        <item>Bachelor of Business Administration</item>
        <item>Bachelor of Pharmacy</item>
        <item>Islamic Studies</item>
        <item>Bachelor of Laws</item>

    </string-array>
    <string name="design_and_develop">Designed and developed by</string>
    <string name="my_name">Md. Mahmudul Islam</string>
    <string name="batch_info">Batch 43th, department of CSE, MIU</string>
    <string name="developer">Developer</string>
    <string name="contact">Contact:</string>
    <string name="mahamudulmiu17_gmail_com">mahamudulmiu17@gmail.com</string>
    <string name="thanks_to_teacher">Specially thanks to all of my honorable teacher for guiding me, inspiring me and making me what i am today.</string>
</resources>