<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DeveloperActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mypicmahmud"
        app:civ_border_color="@color/black"
        app:civ_border_width="1dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design_and_develop"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profile"
        android:layout_marginTop="12dp"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/info"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/info"
        android:id="@+id/name"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/batchInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batch_info"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/name"/>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@id/batchInfo"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/thanksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks_to_teacher"
        android:layout_below="@id/view1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@id/thanksText"
        android:layout_marginTop="8dp"
        android:id="@+id/view2"/>
    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/view2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_email"
            android:layout_marginStart="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mahamudulmiu17_gmail_com"
            android:textSize="13sp"
            android:textColor="#737373"
            android:layout_marginStart="10dp"/>


    </LinearLayout>


</RelativeLayout>